# openenv-devops-simulator

./: .gitignore  Dockerfile  Hackathon FAQs (participants).docx  OpenEnv_Hackathon_Resources.docx  PHASE2_PROBLEM_STATEMENT.md  README.md  SUBMISSION.md  TESTING.md  TODO1.txt  [External] Apr ‘26 OpenEnv Hackathon Themes.txt  __init__.py  client.py  inference.py  models.py  openenv.yaml  phase2_problem_statement.txt  pyproject.toml  requirements-training.txt  requirements.txt  reward_profiles.json  run_server.py
.github/: CODEOWNERS
.github/workflows/: deploy-openenv.yml
api/: server.py
data/: logs_dataset.py
data/live_logs/: live_logs_bundle.txt
docs/: README.md
docs/assets/: README.md
docs/demo/: HF_BLOG_POST.md  MINI_BLOG.md
docs/evidence/: REWARD_EVIDENCE.md
docs/references/: HACKATHON_FAQS.md  OPENENV_HACKATHON_RESOURCES.md
env/: __init__.py  base_env.py  devops_env.py
evaluation/: generate_reward_evidence.py  run_agent_eval.py  run_eval.py  run_incident_command_eval.py  variance_check.py
graders/: __init__.py  registry.py
models/: log_classifier.py  train.py
notebooks/: openenv_devops_submission.ipynb  openenv_devops_training_run.ipynb
outputs/reward_evidence/: README.md  classic_policy_comparison.json  summary.json  (+1 more)
scripts/: baseline.py  export_training_metrics.py  pre_submission_check.sh  render_training_curves.py  smoke_test.sh
server/: Dockerfile  app.py  openenv_devops_environment.py
tasks/: registry.py  task_easy.py  task_hard.py  task_incident_command.py  task_medium.py
utils/: metrics.py  reward_engine.py
